# shallow-water-lab

./: .gitignore  README.md  pyproject.toml
docs/: roadmap.md
environment/: environment.yml  requirements.txt
notebooks/: 01_shallow_water_1d.ipynb  02_shallow_water_2d_cgrid.ipynb  03_geostrophic_adjustment.ipynb  04_rotating_waves.ipynb  05_wind_driven_gyre.ipynb  06_double_gyre_and_coupling.ipynb
src/shallow_water/: __init__.py
src/shallow_water/dynamics/: __init__.py  diagnostics.py  swe1d.py  swe2d.py
src/shallow_water/forcing/: __init__.py  wind.py
src/shallow_water/grids/: __init__.py  cgrid.py  grid1d.py
src/shallow_water/numerics/: __init__.py  timestep.py
src/shallow_water/utils/: __init__.py  io.py
tests/: test_cgrid.py  test_diagnostics.py  test_forcing.py  test_grid1d.py  test_smoke.py  test_swe1d.py  test_swe2d.py
